[package]
name = "pot-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atmospheric-sensor = {path = "../atmospheric-sensor"}
chrono = "0.4.38"
light-sensor = {path = "../light-sensor"}
linux-embedded-hal = {version = "0.4.0", features = ["i2c"]}
moisture-sensor = {path = "../moisture-sensor"}
